Removal of unwanted files. Updated SMT203_Lab1

--- a/SMT203_Lab1/Lab 1 - Google Trends ver2.0.ipynb
+++ b/SMT203_Lab1/Lab 1 - Google Trends ver2.0.ipynb
@@ -24,7 +24,7 @@
     "\n",
     "<b>[pip](https://realpython.com/what-is-pip/)</b> is the standard package manager for Python. It allows you to install and manage additional packages that are not part of the Python standard library. \n",
     "\n",
-    "Let's use pip to install the required package for this lab."
+    "Let's use pip to install the required packages for this lab."
    ]
   },
   {
@@ -50,7 +50,7 @@
    },
    "outputs": [],
    "source": [
-    "!pip install pytrends"
+    "!pip install pytrends "
    ]
   },
   {
@@ -165,7 +165,10 @@
     "id": "cW5UTW22T1g3"
    },
    "source": [
-    "# Add Google Drive as an accessible path"
+    "# Add Google Drive as an accessible path\n",
+    "\n",
+    "The following code sets the working folder for this Python notebook in our Google Drive for ease of access to the data saved. \n",
+    "This step is optional if you are using Jupyter Notebook."
    ]
   },
   {
@@ -249,8 +252,7 @@
     "|asctime|%(asctime)s|Human-readable time when the LogRecord was created.|\n",
     "|name|%(name)s|Name of the logger used to log the call.|\n",
     "|levelname|%(levelname)s|Text logging level for the message ('DEBUG', 'INFO', 'WARNING', 'ERROR', 'CRITICAL').|\n",
-    "|message|%(message)s|The logged message, computed as msg % args. This is set when [Formatter.format()](https://docs.python.org/3/library/logging.html#logging.Formatter.format) is invoked.|\n",
-    "[link text](https://)"
+    "|message|%(message)s|The logged message, computed as msg % args. This is set when [Formatter.format()](https://docs.python.org/3/library/logging.html#logging.Formatter.format) is invoked.|"
    ]
   },
   {
