Update resolution to 'CITY'

--- a/SMT203_Lab1/Lab 1 - Google Trends ver2.0.ipynb
+++ b/SMT203_Lab1/Lab 1 - Google Trends ver2.0.ipynb
@@ -986,7 +986,7 @@
     "6. Set parameters:<br>\n",
     "`pytrends.build_payload([\"new year\"], geo='AU', timeframe='2020-12-04 2021-01-03', cat=0)`\n",
     "7. Rerun the `interest_by_region` API call by setting `resolution` as `CITY`<br>\n",
-    "`df = pytrends.interest_by_region(resolution='REGION', inc_low_vol=True, inc_geo_code=False)`<br>\n",
+    "`df = pytrends.interest_by_region(resolution='CITY', inc_low_vol=True, inc_geo_code=False)`<br>\n",
     "`df.head()`\n",
     "\n",
     "You should now observe that city-level data for AU is displayed as the `pytrends.interest_by_region` now uses the source code found in the newly added 'pytrends' folder instead of the 'pytrends' standard library.\n"
