--- a/Lab2/Lab2_Twitter_API_v2.ipynb
+++ b/Lab2/Lab2_Twitter_API_v2.ipynb
@@ -99,10 +99,10 @@
     "# Consumer/Access key/secret/token obtained from Twitter\n",
     "# You should have created a Twitter app and gotten these keys.\n",
     "# Do NOT share your key/secret/token with other students.\n",
-    "consumer_key    = '1X4O2pwAII4uuazGFnbFUmEyG'\n",
-    "consumer_secret = 'lCh8cJHsSEsdoFwkHev9Yog57NOfcfe0Dck0XK5XLvbgbbkK9X'\n",
-    "access_token    = '1347176054184574976-EHMScHDG6zr5KevYPcfoTi2RBejw3Z'\n",
-    "access_secret   = 'QHsmsona0mBnEVqtUOUSFI4qxlNqzIvISCTpk2p89AMz6'"
+    "consumer_key    = ''\n",
+    "consumer_secret = ''\n",
+    "access_token    = '1'\n",
+    "access_secret   = ''"
    ]
   },
   {
