Include filter for retweet

--- a/snscrape_sample.ipynb
+++ b/snscrape_sample.ipynb
@@ -44,7 +44,7 @@
       "source": [
         "!pip install -q snscrape==0.3.4"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -57,13 +57,13 @@
         "import snscrape.modules.twitter as sntwitter\n",
         "import pandas as pd"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "DzzCSv9qbz4G"
+        "id": "bmZRDzvX-ril"
       },
       "source": [
         "# Add Google Drive as an accessible path (Optional if you are running from Jupyter Notebook)\n",
@@ -72,7 +72,7 @@
         "\n",
         "# change path to the designated google drive folder\n",
         "# otherwise, data will be saved in /content folder which you may have issue locating\n",
-        "%cd /content/drive/My Drive/Colab Notebooks/"
+        "%cd /content/drive/My Drive/Colab Notebooks"
       ],
       "execution_count": null,
       "outputs": []
@@ -93,25 +93,25 @@
       },
       "source": [
         "# set parameters used to retrieve tweets\n",
-        "keyword= 'racism'\n",
-        "from_date = '2020-06-01'\n",
-        "end_date = '2020-06-03'\n",
-        "max_tweet = 500"
+        "keyword= 'elections'\n",
+        "from_date = '2020-11-01'\n",
+        "end_date = '2020-11-05'\n",
+        "max_tweet = 1000"
       ],
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "O68IOWcGbx9-"
+        "id": "5mxouhEy-tze"
       },
       "source": [
         "# Creating list to append tweet data to\n",
         "tweets_list = []\n",
         "\n",
         "# Using TwitterSearchScraper to scrape data and append tweets to list\n",
-        "for i,tweet in enumerate(sntwitter.TwitterSearchScraper(keyword + ' lang:en since:' +  from_date + ' until:' + end_date + ' -filter:links -filter:replies').get_items()):\n",
+        "for i,tweet in enumerate(sntwitter.TwitterSearchScraper(keyword + ' lang:en since:' +  from_date + ' until:' + end_date + ' -filter:links -filter:replies -filter:retweets').get_items()):\n",
         "    tweets_list.append([tweet.date,tweet.id,tweet.username,tweet.content])\n",
         "\n",
         "    if i>max_tweet:\n",
@@ -128,11 +128,33 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "PFSQjEym-xsW"
+      },
+      "source": [
+        "tweets_df.shape"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "v9g1uBkCauRj"
       },
       "source": [
         "# Export tweets to csv file\n",
         "tweets_df.to_csv(f'{keyword}_tweets.csv')"
+      ],
+      "execution_count": 26,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7ZBBo97f-xJ2"
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
